# auth_service

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/: config.py
src/adapters/: config_database.py
src/adapters/sqlalchemy_adapter/: connect.py
src/adapters/sqlalchemy_adapter/models/: roles.py  user.py
src/adapters/sqlalchemy_adapter/repositories/: base.py  roles.py  user.py
src/auth/: utils.py
src/core/: user_service.py
src/core/entities/: roles.py  user.py
src/core/exception/: exception.py
src/core/protocols/: roles.py  user.py
src/main/: app.py  dependencies.py
