[tool.poetry]
name = "auth-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.32.0"
fastapi = "^0.115.3"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
alembic = "^1.13.3"
pyjwt = { extras = ["crypto"], version = "^2.9.0" }
pydantic-settings = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
